# paperwise

./: .env.example  .gitignore  README.md  config.toml.example  pyproject.toml
research_helper/: cli.py  config.py
research_helper/kb/: embedder.py  graph.py  store.py
research_helper/llm/: client.py
research_helper/readers/: __init__.py  arxiv_reader.py  pdf_reader.py  zotero_reader.py
research_helper/reports/: single_paper.py  survey.py
research_helper/utils/: cache.py  cost_tracker.py
