[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-helper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pymupdf>=1.24",
    "arxiv>=2.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "jinja2>=3.1",
    "requests>=2.31",
    "rich>=13.0",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "networkx>=3.0",
    "pyvis>=0.3",
]

[project.scripts]
rh = "research_helper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_helper*"]
